// Initial protocol buffer definition for analytic
// communication.  Defines services for processing video frames via gRPC and
// streaming gRPC.  Analytics can implement the functions defined in the resulting
// auto-generated protobuf code (ie. pkg/analyticproto/analytic.pb.go) or use
// the analyticservice library to register functions with the gRPC server
// (provided as a convenience).
//
// Command to compile protocol buffers for golang:
// $ protoc -I./proto --go_out=plugins=grpc:./pkg/analyticproto/ ./proto/*.proto
syntax = "proto3";  
package ace;

import "google/rpc/status.proto";

// Point is a 2D cartesian coordinate specified as X, Y
message Point{
  int32 x = 1;
  int32 y = 2;
}

// Region of interest is either a bounding box or pixel mask used to denote an
// area of the video frame for which the classification applies. Example: A
// bounding box that defines the rough outline of a person.
message RegionOfInterest{
  oneof localization {
    BoundingBox box = 1;
    PixelMask mask  = 2;
  }

  string classification = 5;
  float confidence = 3;
  string supplement = 4;
}

// Pixel Mask is a list of pixels (Points) which define a region of interest in
// the video frame.
message PixelMask{
  repeated Point pixel = 1;
}

// Bounding box is a rectangle defined by two non-adjacent corners which themselves
// are Points (as defined above).
message BoundingBox{
  Point corner1 = 1;
  Point corner2 = 2;
}

// Frame contains the bytes of a video frame along with the shape and number of
// channels.
message Frame{
  bytes img = 1;
}

// InputFrame contains a video frame along with a framenumber designating it's
// position in the stream and a timestamp specifying when the frame was generated.
message InputFrame{
  Frame frame = 1;
  int64 frame_num = 2;    // The number of the frame if indexed
  float timestamp = 3;  // The timestamp of the frame in the video
  AnalyticData analytic = 4;
}

// FrameData contains a series of RegionOfInterests defining areas of the frame.
message FrameData{
  repeated RegionOfInterest roi = 1;
  int64 start_time_millis = 3;
  int64 end_time_millis = 4; 
  google.rpc.Status status = 5;
}

//
message FrameRequest {
  repeated AnalyticData analytics = 1;
}

message AnalyticData {
  string name = 1;
  string addr = 2;
  bool requires_gpu = 3;
  repeated string operations = 4;
  map<string, string> filters = 5;
}

message CompositeResults {
  repeated CompositeFrame results = 1;
}

// CompositeFrame contains the original frame and analytic results
message CompositeFrame {
  InputFrame frame = 1;
  FrameData data = 2;
  AnalyticData analytic = 3;
}

// An empty proto
message Empty{

}

message AnalyticStatus{
 string status = 1;
}

// Analytic service defines the functions for processing video frames via
// streaming or non-streaming (unary) RPC
service Analytic {
  rpc StreamVideoFrame(stream InputFrame) returns (stream CompositeFrame);
  rpc ProcessVideoFrame(InputFrame) returns (CompositeFrame);
  rpc FanoutFrame(InputFrame) returns(Empty);
  rpc GetFrame(FrameRequest) returns(CompositeResults);
  rpc CheckStatus(Empty) returns(AnalyticStatus);
}
